--- a/Zbang.Cloudents.Mvc4WebRole/Content/SVG.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/SVG.css
@@ -150,10 +150,6 @@
   left: 4px;
   top: 0;
 }
-.svg-doc {
-  width: 17px;
-  height: 17px;
-}
 /*#endregion */
 /*#region quiz page */
 /*#endregion */
